Fixed inputs not centered

--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,72 +1,74 @@
+html,
+body {
+  font-family: "montserrat";
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
-html, body {
-    font-family: 'montserrat';
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
-  #root {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%; 
-    width: 100%;
-    background-color: #2d2d2d;
-  }
-  
-  .login-logo {
-    width: 80px;
-    margin-bottom: 80px;
-  }
-  
-  .login-box {
-    background: #3a3a3a;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    color: white;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    width: 100%;
-    max-width: 400px;
-  }
-  
-  .input-group {
-    margin: 10px 10px;
-  }
-  
-  .input-group > input {
-    width: 100%;
-    padding: 10px;
-    margin: 5px;
-    border: 1px solid white;
-    border-radius: 5px;
-    background-color: transparent;
-    color: white;
-  }
-  
-  .login-btn {
-    width: 100%;
-    padding: 10px;
-    background-color: white;
-    color: #2d2d2d;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .forgot-password {
-    display: block;
-    margin-top: 10px;
-    color: whitesmoke;
-  }
-  
+#root {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  background-color: #2d2d2d;
+}
+
+.login-logo {
+  width: 80px;
+  margin-bottom: 80px;
+}
+
+.login-box {
+  background: #3a3a3a;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: 400px;
+}
+
+.input-group {
+  margin: 10px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-group>input {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0px;
+  border: 1px solid white;
+  border-radius: 5px;
+  background-color: transparent;
+  color: white;
+}
+
+.login-btn {
+  width: 100%;
+  padding: 10px;
+  background-color: white;
+  color: #2d2d2d;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.forgot-password {
+  display: block;
+  margin-top: 10px;
+  color: whitesmoke;
+}
